2013-07-21  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.0.1 Some updates to the documentation.

2013-05-18  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Started to update the documentation, some errors have been found when
        compiling with SPATIAL_SAFER_ARITHMETICS. They are now fixed on the main
        branch.

2013-05-12  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Merged task_3432355 into the main branch. This officially results in
        the library being pushed to version 2.0.0. It now compiles on GCC and
        Clang, test on Windows under progress. Remain to update the
        documentation a little.

2013-03-20  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * task_3432355 Made access to functors inside iterators and containers
        more STL-like.

2013-03-16  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * task_3432355 Used a new, more common standard to name private or
        restricted class members (pre-fix _) by opposition to shadowing function
        parameters (post-fix _).

        * task_3432355 Interface for the neighbor_iterator is finally finalized
        and now the unit testing of neighbor_iterator can restart.

        * task_3432355 Using ordered_iterator to add the relative operators to
        all containers.

2012-11-17  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * task_3432355 New ordered_iterator finally added with its unit
        test. New cross-container operators can now be written properly.

2012-09-23  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * task_3432355 A new fixture framework has been created in order to make
        an efficient use of test template and considerably reduce the number of
        tests required while increasing the portions of code actually tested.

2011-11-08  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>
